Send remove button to the end

--- a/server/templates/index.html
+++ b/server/templates/index.html
@@ -32,7 +32,7 @@
 
             function removeTodo(element) {
                 // get todo id from element id
-                const todo = element.parentElement.id;
+                const todo = element.parentElement.parentElement.id;
 
                 console.log(element)
                 console.log(todo)
