--- a/server/templates/index.html
+++ b/server/templates/index.html
@@ -1,18 +1,12 @@
+<!DOCTYPE html>
 <html>
     <head>
         <title>Cpp Todo</title>
         <script src="https://cdn.tailwindcss.com"></script>
+        <script src="https://unpkg.com/htmx.org@1.9.12"></script>
+        <script src="https://unpkg.com/htmx.org@1.9.12/dist/ext/json-enc.js"></script>
 
         <script>
-            function countId(id) {
-                var counter = 0;
-                $("label").each(function() {
-                  if(this.id==id) {
-                     counter+=1;
-                   } 
-                });
-            }
-
             function addTodo() {
                 // send a post request to server with input value
                 const inp = document.getElementById("inp");
@@ -34,9 +28,6 @@
                 // get todo id from element id
                 const todo = element.parentElement.parentElement.id;
 
-                console.log(element)
-                console.log(todo)
-
                 fetch("http://localhost/remove", {
                     method: "DELETE",
                     headers: {
@@ -53,16 +44,18 @@
     </head>
     <body class = "overflow-scroll">
         <div class="mt-5 mb-40 min-h-screen min-w-screen" id="root">
-            <div class="flex items-center justify-center flex-col gap-[1vh]">
-                {{todos}}
+            <div id="todos" class="flex items-center justify-center flex-col gap-[1vh]" hx-get="/todos" hx-trigger="load">
                 
+            </div>
+            <div class="flex items-center justify-center">
                 <div class="bg-slate-200 h-[12vh] w-[90vw] fixed bottom-0 flex flex-row justify-center items-center rounded-t-[10pt]">
-                    <input class="bg-white h-[8vh] w-[30vw] bottom-4 rounded-[40pt] px-10" type="text" id="inp">
-                <button onClick="addTodo()">
-                    <svg class="h-[6vh] w-[6vh] bottom-4" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" fill="currentColor" class="w-3 h-3">
-                        <path fill-rule="evenodd" d="M10 3a1 1 0 0 1 1 1v5h5a1 1 0 1 1 0 2h-5v5a1 1 0 1 1-2 0v-5H4a1 1 0 1 1 0-2h5V4a1 1 0 0 1 1-1z"></path>
-                    </svg>
-                </button>
+                    <input class="bg-white h-[8vh] w-[30vw] bottom-4 rounded-[40pt] px-10" type="text" id="inp" name="todo">
+                    <button hx-post="/add" hx-ext="json-enc" hx-target="#todos" hx-swap="beforeend" hx-include="[name='todo']">
+                        <svg class="h-[6vh] w-[6vh] bottom-4" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" fill="currentColor" class="w-3 h-3">
+                            <path fill-rule="evenodd" d="M10 3a1 1 0 0 1 1 1v5h5a1 1 0 1 1 0 2h-5v5a1 1 0 1 1-2 0v-5H4a1 1 0 1 1 0-2h5V4a1 1 0 0 1 1-1z"></path>
+                        </svg>
+                    </button>
+                </div>
             </div>
         </div>
     </body>
